--- a/publication.html
+++ b/publication.html
@@ -248,12 +248,12 @@
         <ol class="pub" reversed>
 
 <li>Yu Sugimoto, Jun-You Wang, Li Su, Eita Nakamura<br>
-<strong><a href="https://eita-nakamura.github.io/articles/.pdf"><font color="#222222">Singing MIDI transcription with music language models: Formulation and comparison</font></a></strong> <a href="https://eita-nakamura.github.io/articles/.pdf"><img src="https://eita-nakamura.github.io/images/pdf.png" height="18px"></a><br>
-<em>Proc. 17th Asia Pacific Signal and Information Processing Association Annual Summit and Conference (APSIPA ASC)</em>, pp. ??-??, October 2025.
+<strong><a href="https://eita-nakamura.github.io/articles/Sugimoto_SingingMIDITranscription_APSIPA2025.pdf"><font color="#222222">Singing MIDI transcription with music language models: Formulation and comparison</font></a></strong> <a href="https://eita-nakamura.github.io/articles/Sugimoto_SingingMIDITranscription_APSIPA2025.pdf"><img src="https://eita-nakamura.github.io/images/pdf.png" height="18px"></a><br>
+<em>Proc. 17th Asia Pacific Signal and Information Processing Association Annual Summit and Conference (APSIPA ASC)</em>, pp. 305-310, October 2025.
 
 <li>Sosuke Nishimura, Eita Nakamura<br>
-<strong><a href="https://eita-nakamura.github.io/articles/.pdf"><font color="#222222">Evaluation score prediction for Japanese songs based on melody fitness to lyrics</font></a></strong> <a href="https://eita-nakamura.github.io/articles/.pdf"><img src="https://eita-nakamura.github.io/images/pdf.png" height="18px"></a><br>
-<em>Proc. 17th Asia Pacific Signal and Information Processing Association Annual Summit and Conference (APSIPA ASC)</em>, pp. ??-??, October 2025.
+<strong><a href="https://eita-nakamura.github.io/articles/Nishimura_MelodyEvaluationScorePrediction_APSIPA2025.pdf"><font color="#222222">Evaluation score prediction for Japanese songs based on melody fitness to lyrics</font></a></strong> <a href="https://eita-nakamura.github.io/articles/Nishimura_MelodyEvaluationScorePrediction_APSIPA2025.pdf"><img src="https://eita-nakamura.github.io/images/pdf.png" height="18px"></a><br>
+<em>Proc. 17th Asia Pacific Signal and Information Processing Association Annual Summit and Conference (APSIPA ASC)</em>, pp. 222–227, October 2025.
 
 <li>Ryoko Oda, Eita Nakamura, Daniel Pahr, Henry Ehlers, Eduard Groeller, Renata G. Raidou, Takayuki Itoh<br>
 <strong><a href="https://eita-nakamura.github.io/articles/.pdf"><font color="#222222">ArtEvoViewer: A system for visualizing interpersonal influence among painters</font></a></strong> <a href="https://eita-nakamura.github.io/articles/.pdf"><img src="https://eita-nakamura.github.io/images/pdf.png" height="18px"></a><br>
@@ -497,6 +497,18 @@
 
         <ol class="pub" reversed>
 
+<li>尾上悟嗣, 杉本悠, 金子仁美, 中村栄太<br>
+<strong><a href="https://eita-nakamura.github.io/articles/Onoue_EnsembleCoherence_ASJ2026.pdf"><font color="#222222">管楽器合奏のコヒーレンス度の定式化と個別・全体録音からの推定</font></a></strong> <a href="https://eita-nakamura.github.io/articles/Onoue_EnsembleCoherence_ASJ2026.pdf"><img src="https://eita-nakamura.github.io/images/pdf.png" height="18px" alt=""></a><br>
+<em>日本音響学会第155回(2026年春季)研究発表会</em>, to be presented, March 2026.
+
+<li>杉本悠, 中村栄太<br>
+<strong><a href="https://eita-nakamura.github.io/articles/Sugimoto_HITPSingingTranscription_IPSJ2026.pdf"><font color="#222222">自動採譜誤りの効率的修正を支援する人間介在型歌声採譜手法</font></a></strong> <a href="https://eita-nakamura.github.io/articles/Sugimoto_HITPSingingTranscription_IPSJ2026.pdf"><img src="https://eita-nakamura.github.io/images/pdf.png" height="18px" alt=""></a><br>
+<em>第88回情報処理学会全国大会</em>, to be presented, March 2026.
+
+<li>白石理恵, 杉本悠, 中村栄太, 伊藤貴之<br>
+<strong><a href="https://eita-nakamura.github.io/articles/Shiraishi_HummingMelodyCorrection_IPSJ2026.pdf"><font color="#222222">ハミングメロディ補正のための可視化ユーザインタフェース</font></a></strong> <a href="https://eita-nakamura.github.io/articles/Shiraishi_HummingMelodyCorrection_IPSJ2026.pdf"><img src="https://eita-nakamura.github.io/images/pdf.png" height="18px" alt=""></a><br>
+<em>第88回情報処理学会全国大会</em>, to be presented, March 2026.
+
 <li>中村栄太<br>
 <strong><font color="#222222">作曲スタイルに関する進化駆動力の統計推論手法の構築</font></strong><br>
 <em>第144回情報処理学会音楽情報科学研究会</em>, Vol. 2025-MUS-144, No. 27, pp. 1-7, Sep 2025.
@@ -542,15 +554,15 @@
 <em>第87回情報処理学会全国大会</em>, 1W-05, March 2025. <font color="#ff0080">(学生奨励賞)</font>
 
 <li>高橋舞, 小林未知数, 大向一輝, 中村栄太<br>
-<strong><font color="#222222">ピアノ演奏MIDIデータに基づいたフレーズ・アーチングの分析</font></strong><br>
+<strong><a href="https://eita-nakamura.github.io/articles/高橋_フレーズアーチング分析_2025.pdf"><font color="#222222">ピアノ演奏MIDIデータに基づいたフレーズ・アーチングの分析</font></a></strong> <a href="https://eita-nakamura.github.io/articles/高橋_フレーズアーチング分析_2025.pdf"><img src="https://eita-nakamura.github.io/images/pdf.png" height="18px" alt=""></a><br>
 <em>第142回情報処理学会音楽情報科学研究会</em>, Vol. 2025-MUS-142, No. 60, pp. 1-6, March 2025.
 
 <li>杉本悠, 中村栄太<br>
-<strong><font color="#222222">歌声MIDI採譜における作曲スタイルを導入した言語モデルの効果の検証</font></strong><br>
+<strong><a href="https://eita-nakamura.github.io/articles/杉本_歌声MIDI採譜2025.pdf"><font color="#222222">歌声MIDI採譜における作曲スタイルを導入した言語モデルの効果の検証</font></a></strong> <a href="https://eita-nakamura.github.io/articles/杉本_歌声MIDI採譜2025.pdf"><img src="https://eita-nakamura.github.io/images/pdf.png" height="18px" alt=""></a><br>
 <em>第142回情報処理学会音楽情報科学研究会</em>, Vol. 2025-MUS-142, No. 33, pp. 1-3, March 2025.
 
 <li>西村草介, 中村栄太<br>
-<strong><font color="#222222">歌詞の音韻特徴量に対する適合度を考慮した歌唱曲の生成と自動評価</font></strong><br>
+<strong><a href="https://eita-nakamura.github.io/articles/西村_歌唱曲の自動評価_2025.pdf"><font color="#222222">歌詞の音韻特徴量に対する適合度を考慮した歌唱曲の生成と自動評価</font></a></strong> <a href="https://eita-nakamura.github.io/articles/西村_歌唱曲の自動評価_2025.pdf"><img src="https://eita-nakamura.github.io/images/pdf.png" height="18px" alt=""></a><br>
 <em>第142回情報処理学会音楽情報科学研究会</em>, Vol. 2025-MUS-142, No. 35, pp. 1-3, March 2025.
 
 <li>小田稜子, 中村栄太, 伊藤貴之<br>
@@ -566,7 +578,7 @@
 <em>Proc. 13th Annual Conference of the Japanese Association for Digital Humanities (JADH)</em>, September 2024.
 
 <li>稲葉達郎, 吉井和佳, 中村栄太<br>
-<strong><font color="#222222">記号音楽生成における時間と音高相対性の重要性</font></strong><br>
+<strong><a href="https://eita-nakamura.github.io/articles/稲葉_音楽生成と時刻と音高相対性_2024.pdf"><font color="#222222">記号音楽生成における時間と音高相対性の重要性</font></a></strong> <a href="https://eita-nakamura.github.io/articles/稲葉_音楽生成と時刻と音高相対性_2024.pdf"><img src="https://eita-nakamura.github.io/images/pdf.png" height="18px" alt=""></a><br>
 <em>第141回情報処理学会音楽情報科学研究会</em>, Vol. 2024-MUS-141, No. 3, pp. 1-7, August 2024.
 
 <li>小田稜子, 中村栄太, 伊藤貴之<br>
