--- a/publication_en.html
+++ b/publication_en.html
@@ -92,6 +92,20 @@
         <h3 id="Journal"><font color="#990000">Journal Papers | 雑誌論文</font></h3>
         <ol class="pub" reversed>
 
+<li>Eita Nakamura<br>
+<strong><a href="https://eita-nakamura.github.io/articles/.pdf" target="_blank"><font color="#222222">How music styles have evolved? -Music evolution analysis using data-scientific methods-</font></a></strong> (in Japanese)<br>
+<em>Journal of the Acoustical Society of Japan</em>, Vol. 81, No. 7, pp. 496-503, July 2025.<br>
+中村栄太<br>
+<strong><a href="https://eita-nakamura.github.io/articles/.pdf"><font color="#222222">音楽スタイルはどう変わってきたか? -データ科学的手法による音楽進化解析-</font></a></strong><br>
+<em>日本音響学会誌誌</em>, Vol. 81, No. 7, pp. 496-503, July 2025.
+
+<li>Eita Nakamura<br>
+<strong><a href="https://eita-nakamura.github.io/articles/.pdf" target="_blank"><font color="#222222">Trends and perspectives of music generation research</font></a></strong> (in Japanese)<br>
+<em>The Journal of the Institute of Image Information and Television Engineers</em>, Vol. 78, No. 4, pp. 385-389, July 2024.<br>
+中村栄太<br>
+<strong><a href="https://eita-nakamura.github.io/articles/.pdf"><font color="#222222">音楽生成研究の動向と展望</font></a></strong><br>
+<em>映像情報メディア学会誌</em>, Vol. 78, No. 4, pp. 385-389, July 2024.
+
 <li>Tengyu Deng, Eita Nakamura, Ryo Nishikimi, Kazuyoshi Yoshii<br>
 <strong><font color="#222222">End-to-End Singing Transcription Based on CTC and HSMM Decoding with a Refined Score Representation</font></strong><br>
 <em>APSIPA Transactions on Signal and Information Processing</em>, to appear, 2024.<br>
@@ -230,6 +244,31 @@
         <h3 id="ConferencePaper"><font color="#990000">Conference Papers (Refereed) | 会議論文 (査読あり)</font></h3>
 
         <ol class="pub" reversed>
+
+<li>Yu Sugimoto, Jun-You Wang, Li Su, Eita Nakamura<br>
+<strong><a href="https://eita-nakamura.github.io/articles/Sugimoto_SingingMIDITranscription_APSIPA2025.pdf"><font color="#222222">Singing MIDI transcription with music language models: Formulation and comparison</font></a></strong> <a href="https://eita-nakamura.github.io/articles/Sugimoto_SingingMIDITranscription_APSIPA2025.pdf"><img src="https://eita-nakamura.github.io/images/pdf.png" height="18px"></a><br>
+<em>Proc. 17th Asia Pacific Signal and Information Processing Association Annual Summit and Conference (APSIPA ASC)</em>, pp. 305-310, October 2025.
+
+<li>Sosuke Nishimura, Eita Nakamura<br>
+<strong><a href="https://eita-nakamura.github.io/articles/Nishimura_MelodyEvaluationScorePrediction_APSIPA2025.pdf"><font color="#222222">Evaluation score prediction for Japanese songs based on melody fitness to lyrics</font></a></strong> <a href="https://eita-nakamura.github.io/articles/Nishimura_MelodyEvaluationScorePrediction_APSIPA2025.pdf"><img src="https://eita-nakamura.github.io/images/pdf.png" height="18px"></a><br>
+<em>Proc. 17th Asia Pacific Signal and Information Processing Association Annual Summit and Conference (APSIPA ASC)</em>, pp. 222–227, October 2025.
+
+
+<li>Ryoko Oda, Eita Nakamura, Daniel Pahr, Henry Ehlers, Eduard Groeller, Renata G. Raidou, Takayuki Itoh<br>
+<strong><a href="https://eita-nakamura.github.io/articles/.pdf"><font color="#222222">ArtEvoViewer: A system for visualizing interpersonal influence among painters</font></a></strong> <a href="https://eita-nakamura.github.io/articles/.pdf"><img src="https://eita-nakamura.github.io/images/pdf.png" height="18px"></a><br>
+<em>Proc. 29th International Conference on Information Visualisation (IV)</em>, pp. ??-??, August 2025.
+
+<li>Tatsuro Inaba, Kazuyoshi Yoshii, Eita Nakamura<br>
+<strong><a href="https://eita-nakamura.github.io/articles/.pdf"><font color="#222222">On the importance of time and pitch relativity for transformer-based symbolic music generation</font></a></strong> <a href="https://eita-nakamura.github.io/articles/.pdf"><img src="https://eita-nakamura.github.io/images/pdf.png" height="18px"></a><br>
+<a href="https://doi.org/10.1109/APSIPAASC63619.2025.10849230"><em>Proc. 16th Asia Pacific Signal and Information Processing Association Annual Summit and Conference (APSIPA ASC)</em></a>, pp. ??-??, December 2024.
+
+<li>Fabian C. Moss, Eita Nakamura<br>
+<strong><a href="https://eita-nakamura.github.io/articles/Moss_etal_HarmonyEvolution_CHR2024.pdf" target="_blank"><font color="#222222">Modeling the evolution of harmony in popular music from different cultural contexts</font></a></strong> <a href="https://eita-nakamura.github.io/articles/Moss_etal_HarmonyEvolution_CHR2024.pdf" target="_blank"><img src="https://eita-nakamura.github.io/images/pdf.png" height="18px"></a><br>
+<em>Proc. 5th Conference on Computational Humanities Research (CHR)</em>, pp. 137-152, December 2024.
+
+<li>Francesco Foscarin, Emmanouil Karystinaios, Eita Nakamura, Gerhard Widmer<br>
+<strong><a href="https://eita-nakamura.github.io/articles/Foscarin_etal_VoiceAndStaffPrediction_ISMIR2024.pdf" target="_blank"><font color="#222222">Cluster and separate: a GNN approach to voice and staff prediction for score engraving</font></a></strong> <a href="https://eita-nakamura.github.io/articles/Foscarin_etal_VoiceAndStaffPrediction_ISMIR2024.pdf" target="_blank"><img src="https://eita-nakamura.github.io/images/pdf.png" height="18px"></a><br>
+<em>Proc. 25th International Society for Music Information Retrieval Conference (ISMIR)</em>, pp. 503-510, November 2024.
 
 <li>Takuto Nabeoka, Eita Nakamura, Kazuyoshi Yoshii<br>
 <strong><a href="https://eita-nakamura.github.io/articles/Nabeoka_BandOrchestration_CMMR2023.pdf" target="_blank"><font color="#222222">Automatic orchestration of piano scores for wind bands with user-specified instrumentation</font></a></strong> <a href="https://eita-nakamura.github.io/articles/Nabeoka_BandOrchestration_CMMR2023.pdf" target="_blank"><img src="https://eita-nakamura.github.io/images/pdf.png" height="18px"></a> <a href="https://nabeshinabe.github.io/PianoToBrassBand_nabeoka/demo.html" target="_blank"><button class="MyBtn PinkBtn">Demo</button></a> <a href="https://www.youtube.com/watch?v=dgwOB9mOCt8" target="_blank"><button class="MyBtn PinkBtn">Video</button></a> <a href="https://www.asahi.com/articles/ASR8N5V2PR6YPLBJ004.html?iref=pc_rensai_short_1910_article_5" target="_blank"><button class="MyBtn GreenBtn">Media</button></a><br>
@@ -456,6 +495,98 @@
         <h3 id="ConferenceTalks"><font color="#990000">Conference Talks (Unrefereed) | 学会発表 (査読なし)</font></h3>
 
         <ol class="pub" reversed>
+
+<li>尾上悟嗣, 杉本悠, 金子仁美, 中村栄太<br>
+<strong><a href="https://eita-nakamura.github.io/articles/Onoue_EnsembleCoherence_ASJ2026.pdf"><font color="#222222">管楽器合奏のコヒーレンス度の定式化と個別・全体録音からの推定</font></a></strong> <a href="https://eita-nakamura.github.io/articles/Onoue_EnsembleCoherence_ASJ2026.pdf"><img src="https://eita-nakamura.github.io/images/pdf.png" height="18px" alt=""></a><br>
+<em>日本音響学会第155回(2026年春季)研究発表会</em>, to be presented, March 2026.
+
+<li>杉本悠, 中村栄太<br>
+<strong><a href="https://eita-nakamura.github.io/articles/Sugimoto_HITPSingingTranscription_IPSJ2026.pdf"><font color="#222222">自動採譜誤りの効率的修正を支援する人間介在型歌声採譜手法</font></a></strong> <a href="https://eita-nakamura.github.io/articles/Sugimoto_HITPSingingTranscription_IPSJ2026.pdf"><img src="https://eita-nakamura.github.io/images/pdf.png" height="18px" alt=""></a><br>
+<em>第88回情報処理学会全国大会</em>, to be presented, March 2026.
+
+<li>白石理恵, 杉本悠, 中村栄太, 伊藤貴之<br>
+<strong><a href="https://eita-nakamura.github.io/articles/Shiraishi_HummingMelodyCorrection_IPSJ2026.pdf"><font color="#222222">ハミングメロディ補正のための可視化ユーザインタフェース</font></a></strong> <a href="https://eita-nakamura.github.io/articles/Shiraishi_HummingMelodyCorrection_IPSJ2026.pdf"><img src="https://eita-nakamura.github.io/images/pdf.png" height="18px" alt=""></a><br>
+<em>第88回情報処理学会全国大会</em>, to be presented, March 2026.
+
+<li>中村栄太<br>
+<strong><font color="#222222">作曲スタイルに関する進化駆動力の統計推論手法の構築</font></strong><br>
+<em>第144回情報処理学会音楽情報科学研究会</em>, Vol. 2025-MUS-144, No. 27, pp. 1-7, Sep 2025.
+
+<li>伊藤貴之, 中村栄太<br>
+<strong><font color="#222222">ポピュラー音楽の進化過程の可視化</font></strong><br>
+<em>第144回情報処理学会音楽情報科学研究会</em>, Vol. 2025-MUS-144, No. 25, pp. 1-7, Sep 2025.
+
+<li>尾上悟嗣, 杉本悠, 中村栄太<br>
+<strong><font color="#222222">吹奏楽演奏分析のためのチューナーマイク録音に対する採譜モデルの適応学習</font></strong><br>
+<em>第144回情報処理学会音楽情報科学研究会</em>, 28-5, Sep 2025.
+
+<li>杉本悠, Jun-You Wang, Li Su, 中村栄太<br>
+<strong><font color="#222222">音楽言語モデルを用いた歌声 MIDI 採譜の定式化と比較</font></strong><br>
+<em>第144回情報処理学会音楽情報科学研究会</em>, Vol. 2025-MUS-144, No. 8, pp. 1-7, Sep 2025. <font color="#ff0080">(学生奨励賞)</font>
+
+<li>高橋舞, 小林未知数, 中村栄太, 大向一輝<br>
+<strong><font color="#222222">ピアニストの楽譜への規範意識と演奏における演奏様式の関係</font></strong><br>
+<em>⽇本⾳楽知覚認知学会2025年度春季研究発表会</em>, JSMPC2025(1)-10, pp. 1-6, June 2025.
+
+<li>小林未知数, 高橋舞, 中村栄太<br>
+<strong><font color="#222222">マルチモーダルDTWに基づいたピアノ演奏MIDIデータにおけるフレーズ・アーチングの分析</font></strong><br>
+<em>第143回情報処理学会音楽情報科学研究会</em>, Vol. 2025-MUS-143, No. 12, pp. 1-7, June 2025.
+
+<li>小田稜子, 中村栄太, 伊藤貴之<br>
+<strong><font color="#222222">西洋絵画における画家間の影響関係の可視化と特徴量の比較</font></strong><br>
+<em>2025年度人工知能学会全国大会</em>, 3M4-OS-7a-04, pp. 1-4, May 2025.
+
+<li>西村草介, 中村栄太<br>
+<strong><font color="#222222">深層生成モデルと作品選択モデルに基づく歌詞付きメロディの評価値予測</font></strong><br>
+<em>2025年度人工知能学会全国大会</em>, 3O5-OS-22a-01, pp. 1-4, May 2025.
+
+<li>杉本悠, 中村栄太<br>
+<strong><font color="#222222">作曲スタイル認識を導入したRNNトランスデューサに基づく歌声MIDI採譜</font></strong><br>
+<em>第87回情報処理学会全国大会</em>, 2P-08, March 2025. <font color="#ff0080">(学生奨励賞)</font>
+
+<li>西村草介, 中村栄太<br>
+<strong><font color="#222222">歌詞の条件付きメロディ生成モデルに基づく歌唱曲の評価手法</font></strong><br>
+<em>第87回情報処理学会全国大会</em>, 2P-07, March 2025. <font color="#ff0080">(学生奨励賞)</font>
+
+<li>小田稜子, 中村栄太, 伊藤貴之<br>
+<strong><font color="#222222">ArtEvoViewer : 画家個人間の影響関係を可視化するシステム</font></strong><br>
+<em>第87回情報処理学会全国大会</em>, 1W-05, March 2025. <font color="#ff0080">(学生奨励賞)</font>
+
+<li>高橋舞, 小林未知数, 大向一輝, 中村栄太<br>
+<strong><a href="https://eita-nakamura.github.io/articles/高橋_フレーズアーチング分析_2025.pdf"><font color="#222222">ピアノ演奏MIDIデータに基づいたフレーズ・アーチングの分析</font></a></strong> <a href="https://eita-nakamura.github.io/articles/高橋_フレーズアーチング分析_2025.pdf"><img src="https://eita-nakamura.github.io/images/pdf.png" height="18px" alt=""></a><br>
+<em>第142回情報処理学会音楽情報科学研究会</em>, Vol. 2025-MUS-142, No. 60, pp. 1-6, March 2025.
+
+<li>杉本悠, 中村栄太<br>
+<strong><a href="https://eita-nakamura.github.io/articles/杉本_歌声MIDI採譜2025.pdf"><font color="#222222">歌声MIDI採譜における作曲スタイルを導入した言語モデルの効果の検証</font></a></strong> <a href="https://eita-nakamura.github.io/articles/杉本_歌声MIDI採譜2025.pdf"><img src="https://eita-nakamura.github.io/images/pdf.png" height="18px" alt=""></a><br>
+<em>第142回情報処理学会音楽情報科学研究会</em>, Vol. 2025-MUS-142, No. 33, pp. 1-3, March 2025.
+
+<li>西村草介, 中村栄太<br>
+<strong><a href="https://eita-nakamura.github.io/articles/西村_歌唱曲の自動評価_2025.pdf"><font color="#222222">歌詞の音韻特徴量に対する適合度を考慮した歌唱曲の生成と自動評価</font></a></strong> <a href="https://eita-nakamura.github.io/articles/西村_歌唱曲の自動評価_2025.pdf"><img src="https://eita-nakamura.github.io/images/pdf.png" height="18px" alt=""></a><br>
+<em>第142回情報処理学会音楽情報科学研究会</em>, Vol. 2025-MUS-142, No. 35, pp. 1-3, March 2025.
+
+<li>小田稜子, 中村栄太, 伊藤貴之<br>
+<strong><font color="#222222">西洋絵画における作者の影響関係を可視化するユーザインタフェース</font></strong><br>
+<em>第32回インタラクティブシステムとソフトウェアに関するワークショップ (WISS 2024)</em>, 1-B06, December 2024.
+
+<li>Eita Nakamura<br>
+<strong><font color="#222222">Bayesian model of multiparental cultural transmission for reference network estimation</font></strong><br>
+<em>Cultural Evolution Society Conference (CES)</em>, September 2024.
+
+<li>Mai Takahashi, Michikazu Kobayashi, Eita Nakamura, Ikki Ohmukai<br>
+<strong><font color="#222222">Analysis of performance style by MIDI piano recordings</font></strong><br>
+<em>Proc. 13th Annual Conference of the Japanese Association for Digital Humanities (JADH)</em>, September 2024.
+
+<li>稲葉達郎, 吉井和佳, 中村栄太<br>
+<strong><a href="https://eita-nakamura.github.io/articles/稲葉_音楽生成と時刻と音高相対性_2024.pdf"><font color="#222222">記号音楽生成における時間と音高相対性の重要性</font></a></strong> <a href="https://eita-nakamura.github.io/articles/稲葉_音楽生成と時刻と音高相対性_2024.pdf"><img src="https://eita-nakamura.github.io/images/pdf.png" height="18px" alt=""></a><br>
+<em>第141回情報処理学会音楽情報科学研究会</em>, Vol. 2024-MUS-141, No. 3, pp. 1-7, August 2024.
+
+<li>小田稜子, 中村栄太, 伊藤貴之<br>
+<strong><a href="https://eita-nakamura.github.io/articles/小田ら_画家影響度可視化_可視化情報シンポジウム2024.pdf" target="_blank"><font color="#222222">色彩スタイルにもとづく創作者の影響度の可視化</font></a></strong> <a href="https://eita-nakamura.github.io/articles/小田ら_画家影響度可視化_可視化情報シンポジウム2024.pdf" target="_blank"><img src="https://eita-nakamura.github.io/images/pdf.png" height="18px" alt=""></a><br>
+<em>第52回可視化情報シンポジウム</em>, No. OS9-2-3, pp. 1-5, July 2024.
+
+<li>高橋舞, 小林未知数, 中村栄太, 大向一輝<br>
+<strong><a href="https://eita-nakamura.github.io/articles/高橋ら_フレーズアーチング分析_音楽知覚認知学会2024.pdf" target="_blank"><font color="#222222">ピアノコンクールの審査結果におけるフレーズ・アーチングの分析</font></a></strong> <a href="https://eita-nakamura.github.io/articles/高橋ら_フレーズアーチング分析_音楽知覚認知学会2024.pdf" target="_blank"><img src="https://eita-nakamura.github.io/images/pdf.png" height="18px" alt=""></a><br>
+<em>日本音楽知覚認知学会2024年度春季研究発表会</em>, No. JSMPC2024(1)-5, pp. 1-6, June 2024.
 
 <li>平松祐紀, 中川慧, 高野海斗, 中村栄太<br>
 <strong>Stock to Music: 多変量株価時系列データの音楽変換</strong><br>
