--- a/publication_en.html
+++ b/publication_en.html
@@ -253,9 +253,8 @@
 <strong><a href="https://eita-nakamura.github.io/articles/Nishimura_MelodyEvaluationScorePrediction_APSIPA2025.pdf"><font color="#222222">Evaluation score prediction for Japanese songs based on melody fitness to lyrics</font></a></strong> <a href="https://eita-nakamura.github.io/articles/Nishimura_MelodyEvaluationScorePrediction_APSIPA2025.pdf"><img src="https://eita-nakamura.github.io/images/pdf.png" height="18px"></a><br>
 <em>Proc. 17th Asia Pacific Signal and Information Processing Association Annual Summit and Conference (APSIPA ASC)</em>, pp. 222–227, October 2025.
 
-
 <li>Ryoko Oda, Eita Nakamura, Daniel Pahr, Henry Ehlers, Eduard Groeller, Renata G. Raidou, Takayuki Itoh<br>
-<strong><a href="https://eita-nakamura.github.io/articles/.pdf"><font color="#222222">ArtEvoViewer: A system for visualizing interpersonal influence among painters</font></a></strong> <a href="https://eita-nakamura.github.io/articles/.pdf"><img src="https://eita-nakamura.github.io/images/pdf.png" height="18px"></a><br>
+<strong><a href="https://eita-nakamura.github.io/articles/Oda_ArtEvoViewer_IV2025.pdf"><font color="#222222">ArtEvoViewer: A system for visualizing interpersonal influence among painters</font></a></strong> <a href="https://eita-nakamura.github.io/articles/Oda_ArtEvoViewer_IV2025.pdf"><img src="https://eita-nakamura.github.io/images/pdf.png" height="18px"></a><br>
 <em>Proc. 29th International Conference on Information Visualisation (IV)</em>, pp. ??-??, August 2025.
 
 <li>Tatsuro Inaba, Kazuyoshi Yoshii, Eita Nakamura<br>
